@@ -1,5 +1,5 @@
 # data file for the Fltk User Interface Designer (fluid)
-version 1.0107 
+version 1.0109 
 do_not_include_H_from_C 
 header_name {.hpp} 
 code_name {.cpp}
@@ -110,7 +110,7 @@ class Plus4EmuGUI_SoundConfigWindow {open
   gui.config.sound.latency = o->value() / 1000.0;
   gui.config.soundSettingsChanged = true;
 }}
-          tooltip {Audio output latency in milliseconds; smaller values improve the responsiveness of the emulator, but may cause the sound to skip} xywh {200 56 120 23} type Horizontal color 47 selection_color 52 align 8 minimum 5 maximum 500 step 1 value 100
+          tooltip {Audio output latency in milliseconds; smaller values improve the responsiveness of the emulator, but may cause the sound to skip} xywh {200 56 120 23} type Horizontal color 47 selection_color 52 align 8 minimum 5 maximum 500 step 1 value 70
         }
         Fl_Value_Input soundHWPeriodsValuator {
           label {Hardware buffers}
@@ -119,7 +119,7 @@ class Plus4EmuGUI_SoundConfigWindow {open
   o->value(double(gui.config.sound.hwPeriods));
   gui.config.soundSettingsChanged = true;
 }}
-          tooltip {Number of sound card buffers; click and drag to change the value} xywh {200 90 35 25} align 8 when 4 minimum 2 maximum 16 step 1 value 4
+          tooltip {Number of sound card buffers; click and drag to change the value} xywh {200 90 35 25} align 8 when 4 minimum 2 maximum 16 step 1 value 16
           code0 {o->cursor_color(Fl_Color(3));}
         }
         Fl_Value_Input soundSWPeriodsValuator {
@@ -129,7 +129,7 @@ class Plus4EmuGUI_SoundConfigWindow {open
   o->value(double(gui.config.sound.swPeriods));
   gui.config.soundSettingsChanged = true;
 }}
-          tooltip {Number of buffers in emulator ring buffer; click and drag to change the value} xywh {200 125 35 25} align 8 when 4 minimum 2 maximum 16 step 1 value 4
+          tooltip {Number of buffers in emulator ring buffer; click and drag to change the value} xywh {200 125 35 25} align 8 when 4 minimum 1 maximum 16 step 1 value 3
           code0 {o->cursor_color(Fl_Color(3));}
         }
       }
