@@ -1,7 +1,7 @@
 
 // plus4emu -- portable Commodore Plus/4 emulator
-// Copyright (C) 2003-2008 Istvan Varga <istvanv@users.sourceforge.net>
-// http://sourceforge.net/projects/plus4emu/
+// Copyright (C) 2003-2016 Istvan Varga <istvanv@users.sourceforge.net>
+// https://github.com/istvan-v/plus4emu/
 //
 // This program is free software; you can redistribute it and/or modify
 // it under the terms of the GNU General Public License as published by
@@ -231,14 +231,14 @@ namespace Plus4Emu {
                                 sound.sampleRate, 48000.0,
                                 soundSettingsChanged, 11025.0, 96000.0);
     defineConfigurationVariable(*this, "sound.latency",
-                                sound.latency, 0.1,
+                                sound.latency, 0.07,
                                 soundSettingsChanged, 0.005, 0.5);
     defineConfigurationVariable(*this, "sound.hwPeriods",
                                 sound.hwPeriods, int(16),
                                 soundSettingsChanged, 2.0, 16.0);
     defineConfigurationVariable(*this, "sound.swPeriods",
                                 sound.swPeriods, int(3),
-                                soundSettingsChanged, 2.0, 16.0);
+                                soundSettingsChanged, 1.0, 16.0);
     defineConfigurationVariable(*this, "sound.file",
                                 sound.file, std::string(""),
                                 soundSettingsChanged);
