@@ -1,7 +1,7 @@
 
 // plus4emu -- portable Commodore Plus/4 emulator
-// Copyright (C) 2003-2008 Istvan Varga <istvanv@users.sourceforge.net>
-// http://sourceforge.net/projects/plus4emu/
+// Copyright (C) 2003-2016 Istvan Varga <istvanv@users.sourceforge.net>
+// https://github.com/istvan-v/plus4emu/
 //
 // This program is free software; you can redistribute it and/or modify
 // it under the terms of the GNU General Public License as published by
@@ -40,8 +40,10 @@ namespace Plus4Emu {
    public:
     AudioOutput();
     virtual ~AudioOutput();
-    // set audio output parameters (changing these settings implies
-    // restarting the audio output stream if it is already open)
+    /*!
+     * Set audio output parameters (changing these settings implies
+     * restarting the audio output stream if it is already open).
+     */
     void setParameters(int deviceNumber_, float sampleRate_,
                        float totalLatency_ = 0.1f,
                        int nPeriodsHW_ = 4, int nPeriodsSW_ = 4);
@@ -49,17 +51,25 @@ namespace Plus4Emu {
     {
       return this->sampleRate;
     }
-    // write sound output to the specified file name, closing any
-    // previously opened file with a different name
-    // if the name is an empty string, no file is written
+    /*!
+     * Write sound output to the specified file name, closing any
+     * previously opened file with a different name.
+     * If the name is an empty string, no file is written.
+     */
     void setOutputFile(const std::string& fileName);
-    // write 'nFrames' mono samples from 'buf' (in 16 bit signed PCM format)
-    // to the audio output device and file
+    /*!
+     * Write 'nFrames' mono samples from 'buf' (in 16 bit signed PCM format)
+     * to the audio output device and file.
+     */
     virtual void sendAudioData(const int16_t *buf, size_t nFrames);
-    // close the audio device
+    /*!
+     * Close the audio device.
+     */
     virtual void closeDevice();
-    // returns an array of the available audio device names,
-    // indexed by the device number (starting from zero)
+    /*!
+     * Returns an array of the available audio device names,
+     * indexed by the device number (starting from zero).
+     */
     virtual std::vector< std::string > getDeviceList();
    protected:
     virtual void openDevice();
